--- a/final-3.html
+++ b/final-3.html
@@ -1,10 +1,10 @@
-<!-- 福田拓真のhtml -->
+<!-- 福田拓まのhtml -->
 <!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
         <title>index</title>
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="css/final-3.css">
     </head>
    
     <body>
@@ -15,22 +15,22 @@
         <div class="menu">
            
             <span class="menuitem">
-                Top
+            <a href="index.html"class="menu">
+              Top
+            </a>
             </span><!--
             --><span class="menuitem">
-            <a href="final-1.html" class="menu">
+            <a href="final-1.html"class="menu">
                 overview
             </a>
             </span><!--
             --><span class="menuitem">
-            <a href="final-2.html" class="menu">
+            <a href="final-2.html"class="menu">
                 soccer
             </a>
             </span><!--
             --><span class="menuitem">
-            <a href="final-3.html" class="menu">
-                rugby
-            </a>
+             rugby
             </span>
         </div>
        
